--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { title } = Astro.props;
 import Footer from '../components/elements/footer.astro';
-import Navbar from '../components/navbar.jsx';
+// import Navbar from '../components/navbar.jsx';
 ---
 
 <!doctype html>
@@ -19,7 +19,7 @@ import Navbar from '../components/navbar.jsx';
 		<title>{title}</title>
 	</head>
 	<body>
-		<Navbar client:load />
+		<!--<Navbar client:load /> -->
 		<slot />
 		<Footer/>
 	</body>
