upgrade all dependencies

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 interface Props {
 	title: string;
 }
-
+import '../styles/global.css'
 import Footer from '../components/elements/footer.astro';
 import Navbar from '../components/navbar.jsx';
 
