--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/osmkerala.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<slot name="head"/>
 	</head>
 	<body>
 		<Navbar />
